[gd_scene load_steps=10 format=3 uid="uid://0cko5g3ygqtc"]

[ext_resource type="Theme" uid="uid://8ksayhvmavpw" path="res://scenes/ui/coretheme.tres" id="1_5ipx7"]
[ext_resource type="Texture2D" uid="uid://d1lvk518vq48j" path="res://assetts/Objects/Basic_tools_and_meterials.png" id="2_n0hn3"]
[ext_resource type="Script" path="res://scenes/ui/Toolbuttons.gd" id="2_nnuh0"]
[ext_resource type="Texture2D" uid="uid://dofmclsfnbtps" path="res://assetts/Objects/Basic_Plants.png" id="3_0gbun"]

[sub_resource type="AtlasTexture" id="AtlasTexture_itkrr"]
atlas = ExtResource("2_n0hn3")
region = Rect2(17, 0, 14, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yibqv"]
atlas = ExtResource("2_n0hn3")
region = Rect2(34, 0, 14, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_4c67p"]
atlas = ExtResource("2_n0hn3")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e71qp"]
atlas = ExtResource("3_0gbun")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jjumg"]
atlas = ExtResource("3_0gbun")
region = Rect2(0, 17, 16, 15)

[node name="Ui" type="PanelContainer"]
custom_minimum_size = Vector2(26, 26)
offset_right = 53.0
offset_bottom = 54.0
mouse_filter = 2
theme = ExtResource("1_5ipx7")
theme_type_variation = &"Darkwood"

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="Margin"]
layout_mode = 2
script = ExtResource("2_nnuh0")

[node name="ToolAxe" type="Button" parent="Margin/HBox"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_itkrr")
icon_alignment = 1

[node name="ToolPick" type="Button" parent="Margin/HBox"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_yibqv")
icon_alignment = 1

[node name="ToolWater" type="Button" parent="Margin/HBox"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_4c67p")
icon_alignment = 1

[node name="ToolCorn" type="Button" parent="Margin/HBox"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_e71qp")
icon_alignment = 1

[node name="ToolTomato" type="Button" parent="Margin/HBox"]
custom_minimum_size = Vector2(26, 26)
layout_mode = 2
theme_type_variation = &"ToolButton"
icon = SubResource("AtlasTexture_jjumg")
icon_alignment = 1

[connection signal="pressed" from="Margin/HBox/ToolAxe" to="Margin/HBox" method="_on_tool_axe_pressed"]
[connection signal="pressed" from="Margin/HBox/ToolPick" to="Margin/HBox" method="_on_tool_pick_pressed"]
[connection signal="pressed" from="Margin/HBox/ToolWater" to="Margin/HBox" method="_on_tool_water_pressed"]
[connection signal="pressed" from="Margin/HBox/ToolCorn" to="Margin/HBox" method="_on_tool_corn_pressed"]
[connection signal="pressed" from="Margin/HBox/ToolTomato" to="Margin/HBox" method="_on_tool_tomato_pressed"]
